add stats in app
